--- a/.github/workflows/update_release_assets.yml
+++ b/.github/workflows/update_release_assets.yml
@@ -1,9 +1,9 @@
 name: Build and update release assets
+
 on:
   push:
     tags:
       - v*
-
 
 jobs:
   assets:
@@ -35,4 +35,4 @@ jobs:
         export GOPATH=$(go env GOPATH)
         go get -u github.com/tcnksm/ghr
         echo "Upload version [${{ steps.tag.outputs.version }}]"
-        ${GOPATH}/bin/ghr ${{ steps.tag.outputs.version }}
+        ${GOPATH}/bin/ghr -delete -replace ${{ steps.tag.outputs.version }} bin/release
